--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="profile">
       <img class="profile-picture" src="images/profile.jpg" alt="profile-picture">
       <h2>Hello.</h2>
-      <p>I'm one of the founder members and guitarrist at Twilight Sword. I am also a chef, and coffee aficionado.</p>
+      <p>I'm one of the founding members and guitarist at Twilight Sword. I am also a chef and a coffee aficionado.</p>
     </div>
     <hr class="horizontal-line">
     <div class="skills">
@@ -31,17 +31,17 @@
       <div class="skill-row">
         <img class="picture-left" src="images/coffee.jpeg" alt="latte-art">
         <h3>Coffee</h3>
-        <p>I roast and brew my own coffee. I make latte almost every day. I also like pour over brewing, like V60, and french press. </p>
+        <p>I roast and brew my own coffee. I make latte art almost every day. I also like pour over brewing, especially V60, and french press. </p>
       </div>
       <div class="skill-row">
         <img class="picture-right" src="images/food.jpeg" alt="food">
         <h3>Culinary</h3>
-        <p>I have a culinary degree and worked in awarded restaurants for years. My specialty is French cuisine. I also like baking bread a lot!</p>
+        <p>I have a culinary degree and worked in award winning restaurants for years. My specialty is French cuisine. I also like baking bread a lot!</p>
       </div>
       <div class="skill-row">
         <img class="picture-left" src="images/musical-instruments.jpeg" alt="musical-instruments">
         <h3>Musical instruments</h3>
-        <p>I've been playing electric guitar since 2006. I've also learnt and worked with building guitars from scratch. In the last few years, I started to learn bass and drums, as well as always practising singing.</p>
+        <p>I've been playing electric guitar since 2006. I've also learnt and worked with building guitars from scratch. In the last few years, I started to learn bass and drums. I'm also always practising singing.</p>
       </div>
     </div>
     <hr class="horizontal-line">
